--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,15 @@
   "author": "Ian Sibley",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-babili": "^0.1.4",
+    "hawk": "^6.0.2",
+    "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "babel-preset-minify": "^0.2.0",
     "easy-pack": "0.0.1",
     "electron": "^1.7.9",
+    "graceful-fs": "^4.1.11",
+    "minimatch": "^3.0.4",
     "node-cmd": "^3.0.0",
     "node-minify": "^2.3.1",
     "path": "^0.12.7",
