--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ wheels/
 .installed.cfg
 *.egg
 
+# Extras (as we need them)
+frontend/src/elec_finals/final.*    #so bad compilations don't go floating around
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
