--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ wheels/
 *.egg
 
 # Extras (as we need them)
-frontend/src/elec_finals/final.*    #so bad compilations don't go floating around
+final.*    #so bad compilations don't go floating around
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
