--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,21 @@
   "main": "electron-setup.js",
   "repository": "https://github.com/purduerov/XX-Core",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "webpack -d --watch",
+    "build" : "webpack -p"
   },
   "author": "Purdue ROV Software Team",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "es6-promise": "^4.1.1",
     "hawk": "^6.0.2",
     "jquery": "^3.2.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "read-file": "^0.2.0"
   },
   "devDependencies": {
