--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "ROV 2017-18 package.json for our nodejs based framework",
-  "main": "electron-setup.js",
-  "repository": "https://github.com/purduerov/XX-Core",
-  "scripts": {
-    "start": "electron .",
-    "dev": "webpack -d --watch",
-    "build": "webpack -p"
-  },
-  "author": "Purdue ROV Software Team",
-  "license": "ISC",
-  "dependencies": {
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "es6-promise": "^4.1.1",
-    "hawk": "^6.0.2",
-    "jquery": "^3.2.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "read-file": "^0.2.0",
-    "webpack": "^3.8.1"
-  },
-  "devDependencies": {
-    "babel-preset-minify": "^0.2.0",
-    "easy-pack": "0.0.1",
-    "electron": "^1.7.9",
-    "graceful-fs": "^4.1.11",
-    "minimatch": "^3.0.4",
-    "node-cmd": "^3.0.0",
-    "node-minify": "^2.3.1",
-    "path": "^0.12.7",
-    "url": "^0.11.0"
-  }
+    "name": "frontend",
+    "version": "1.0.0",
+    "description": "ROV 2017-18 package.json for our nodejs based framework",
+    "main": "electron-setup.js",
+    "repository": "https://github.com/purduerov/XX-Core",
+    "scripts": {
+        "start": "electron .",
+        "dev": "webpack -d",
+        "watch": "webpack -d --watch",
+        "build": "webpack -p"
+    },
+    "author": "Purdue ROV Software Team",
+    "license": "ISC",
+    "dependencies": {
+        "babel-loader": "^7.1.2",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "es6-promise": "^4.1.1",
+        "hawk": "^6.0.2",
+        "jquery": "^3.2.1",
+        "react": "^16.0.0",
+        "react-dom": "^16.0.0",
+        "read-file": "^0.2.0",
+        "webpack": "^3.8.1"
+    },
+    "devDependencies": {
+        "babel-preset-minify": "^0.2.0",
+        "easy-pack": "0.0.1",
+        "electron": "^1.7.9",
+        "graceful-fs": "^4.1.11",
+        "minimatch": "^3.0.4",
+        "node-cmd": "^3.0.0",
+        "node-minify": "^2.3.1",
+        "path": "^0.12.7",
+        "url": "^0.11.0"
+    }
 }
