--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "hawk": "^6.0.2",
         "jquery": "^3.2.1",
         "react": "^16.0.0",
+        "react-camera": "^0.1.3",
         "react-dom": "^16.0.0",
         "read-file": "^0.2.0",
         "webpack": "^3.8.1"
