--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,17 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.7",
         "es6-promise": "^4.1.1",
+        "extract-text-webpack-plugin": "^3.0.2",
         "hawk": "^6.0.2",
         "jquery": "^3.2.1",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
         "read-file": "^0.2.0",
-        "webpack": "^3.8.1"
+        "style-loader": "^0.19.0",
+        "webpack": "^3.8.1",
+        "webpack-combine-loaders": "^2.0.3"
     },
     "devDependencies": {
         "babel-preset-minify": "^0.2.0",
