--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -13,6 +13,7 @@ isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.9.5
 lazy-object-proxy==1.2.2
+pytest==3.3.2
 MarkupSafe==0.23
 mccabe==0.6.1
 packaging==16.8
