Matt's comments, and some VS code fighting on my end

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
         "css-loader": "^0.28.7",
         "electron": "^1.7.9",
         "es2015": "0.0.0",
+        "eslint": "^4.16.0",
         "extract-text-webpack-plugin": "^3.0.2",
+        "flow": "^0.2.3",
+        "flow-bin": "^0.64.0",
         "path": "^0.12.7",
         "react": "^16.2.0",
         "react-camera": "^0.1.3",
