--- a/surface/package.json
+++ b/surface/package.json
@@ -6,7 +6,7 @@
     "repository": "https://github.com/purduerov/XX-Core",
     "scripts": {
         "start": "electron .",
-	"install": "./proxyinstall.sh",
+        "proxy": "./proxyinstall.sh",
         "dev": "webpack -d",
         "watch": "webpack -d --watch",
         "build": "webpack -p"
@@ -17,7 +17,11 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-minify": "^0.2.0",
+        "easy-pack": "0.0.1",
+        "graceful-fs": "^4.1.11",
         "css-loader": "^0.28.7",
+        "electron": "^1.7.9",
         "es6-promise": "^4.1.1",
         "extract-text-webpack-plugin": "^3.0.2",
         "hawk": "^6.0.2",
@@ -27,18 +31,12 @@
         "react-dom": "^16.0.0",
         "read-file": "^0.2.0",
         "style-loader": "^0.19.0",
-        "webpack": "^3.8.1",
-        "webpack-combine-loaders": "^2.0.3"
-    },
-    "devDependencies": {
-        "babel-preset-minify": "^0.2.0",
-        "easy-pack": "0.0.1",
-        "electron": "^1.7.9",
-        "graceful-fs": "^4.1.11",
         "minimatch": "^3.0.4",
         "node-cmd": "^3.0.0",
         "node-minify": "^2.3.1",
         "path": "^0.12.7",
-        "url": "^0.11.0"
+        "url": "^0.11.0",
+        "webpack": "^3.8.1",
+        "webpack-combine-loaders": "^2.0.3"
     }
 }
