added matplotlib support

--- a/install/config.json
+++ b/install/config.json
@@ -21,7 +21,7 @@
         "libv4l-dev",
         "cmake"
     ],
-    "virtualenv": "/usr/bin/virtualenv",
+    "virtualenv": "/usr/local/bin/virtualenv",
     "venv": "venv",
     "testfiles": [
         "application.py",
