Finished integrating movement. Ready to test with ESC's. Also some minor fixes to scotty install and packet compatibility.

--- a/install/config.json
+++ b/install/config.json
@@ -5,7 +5,8 @@
         "gcc",
         "python",
         "python-dev",
-        "python-pip"
+        "python-pip",
+        "python-tk"
     ],
     "aptget-hw": [
         "python-smbus",
