PWM/I2C constants have now been updated for thrusters. Fixed an install issue (matplotlib).

--- a/install/config.json
+++ b/install/config.json
@@ -13,7 +13,8 @@
         "libffi-dev",
         "i2c-tools",
         "wiringpi",
-        "python-numpy"
+        "python-numpy",
+	"python-matplotlib"
     ],
     "aptget-cam": [
         "libjpeg8-dev",
