Gamepad works with driving, updated, and some binding function tweaks. Also loading in the dearclient versions for applicaiton.py and rov.py so the Surface UI doesn't get an empty object when there's no pi attached (i.e. running on just the laptop)

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ __pycache__/
 # C extensions
 *.so
 
+surface/pakfront/bin/*
+surface/pakfront/src/*
+surface/pakfront/pkg/*
+surface/pakfrontpid
+surface/log.txt
+
 *.babelrc
 .vscode/
 
