--- a/surface/package.json
+++ b/surface/package.json
@@ -21,9 +21,10 @@
     "child-process": "^1.0.2",
     "css-loader": "^0.28.7",
     "easy-pack": "0.0.1",
-    "electron": "^1.7.9",
+    "electron": "^1.8.4",
     "es6-promise": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "fs": "0.0.1-security",
     "graceful-fs": "^4.1.11",
     "hawk": "^6.0.2",
     "jquery": "^3.2.1",
