--- a/surface/package.json
+++ b/surface/package.json
@@ -32,6 +32,7 @@
     "minimatch": "^3.0.4",
     "node-cmd": "^3.0.0",
     "node-minify": "^2.3.1",
+    "npm": "^5.8.0",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-camera": "^0.1.3",
