--- a/surface/package.json
+++ b/surface/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.28.7",
     "easy-pack": "0.0.1",
     "electron": "^1.8.4",
+    "electron-context-menu": "^0.9.1",
     "es6-promise": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "fs": "0.0.1-security",
