Functional, but unfinished -- I set the calculator to function without freezing the page, but it makes it slow. This might be something worth putting on a second window for... reasons. Or having a back-end process run.

--- a/surface/package.json
+++ b/surface/package.json
@@ -30,6 +30,7 @@
     "graceful-fs": "^4.1.11",
     "hawk": "^6.0.2",
     "jquery": "^3.2.1",
+    "mathjs": "^4.3.0",
     "minimatch": "^3.0.4",
     "node-cmd": "^3.0.0",
     "node-minify": "^2.3.1",
