--- a/surface/package.json
+++ b/surface/package.json
@@ -5,6 +5,7 @@
   "main": "electron-setup.js",
   "repository": "https://github.com/purduerov/XX-Core",
   "scripts": {
+    "last": "electron .",
     "start": "webpack -d && electron .",
     "proxy": "./pakfront/proxyinstall.sh",
     "proxyup": "./pakfront/proxyrun.sh",
@@ -15,6 +16,7 @@
   "author": "Purdue ROV Software Team",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.5.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.2.0",
@@ -22,7 +24,7 @@
     "child-process": "^1.0.2",
     "css-loader": "^0.28.7",
     "easy-pack": "0.0.1",
-    "electron": "^1.8.4",
+    "electron": "^1.8.7",
     "electron-context-menu": "^0.9.1",
     "es6-promise": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
